# webcam-automation

./: README.md  conftest.py  pyproject.toml
core/: fixtures.py
tests/: main_test.py
